--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20720,6 +20720,7 @@ server=/cllcczx.com/114.114.114.114
 server=/clled.com/114.114.114.114
 server=/cllk.net/114.114.114.114
 server=/clloz.com/114.114.114.114
+server=/clmmw.com/114.114.114.114
 server=/clngaa.com/114.114.114.114
 server=/cloooud.com/114.114.114.114
 server=/cloopen.com/114.114.114.114
