--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20808,6 +20808,7 @@ server=/cloudflareip.com/114.114.114.114
 server=/cloudflareprod.com/114.114.114.114
 server=/cloudflarestoragegw.com/114.114.114.114
 server=/cloudfoshan.com/114.114.114.114
+server=/cloudfront-cn.net/114.114.114.114
 server=/cloudfuqing.com/114.114.114.114
 server=/cloudganzhou.com/114.114.114.114
 server=/cloudgap.net/114.114.114.114
