--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20857,6 +20857,7 @@ server=/cloudnanning.com/114.114.114.114
 server=/cloudnantong.com/114.114.114.114
 server=/cloudnapps.com/114.114.114.114
 server=/cloudnet.world/114.114.114.114
+server=/cloudnetb2b.com/114.114.114.114
 server=/cloudouc.com/114.114.114.114
 server=/cloudp.cc/114.114.114.114
 server=/cloudpense.com/114.114.114.114
