--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21479,6 +21479,7 @@ server=/cniti.com/114.114.114.114
 server=/cnitom.com/114.114.114.114
 server=/cnitpm.com/114.114.114.114
 server=/cnitv.net/114.114.114.114
+server=/cniuv.com/114.114.114.114
 server=/cnix.cc/114.114.114.114
 server=/cnjccrusher.com/114.114.114.114
 server=/cnjffb.com/114.114.114.114
