--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21529,6 +21529,7 @@ server=/cnkix.com/114.114.114.114
 server=/cnkizw.com/114.114.114.114
 server=/cnklog.com/114.114.114.114
 server=/cnknowledge.com/114.114.114.114
+server=/cnkok.com/114.114.114.114
 server=/cnkosun.com/114.114.114.114
 server=/cnkpgs.com/114.114.114.114
 server=/cnkuai.com/114.114.114.114
