--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21745,6 +21745,7 @@ server=/cntheory.com/114.114.114.114
 server=/cnthinkers.com/114.114.114.114
 server=/cntingyun.com/114.114.114.114
 server=/cntlxd.com/114.114.114.114
+server=/cntmc.com/114.114.114.114
 server=/cntofu.com/114.114.114.114
 server=/cntopgear.com/114.114.114.114
 server=/cntoplead.com/114.114.114.114
