--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21820,6 +21820,7 @@ server=/cnxuntu.com/114.114.114.114
 server=/cnxyk.com/114.114.114.114
 server=/cnxzm.com/114.114.114.114
 server=/cnyanglao.com/114.114.114.114
+server=/cnyibs.com/114.114.114.114
 server=/cnyings.com/114.114.114.114
 server=/cnyipu.com/114.114.114.114
 server=/cnyixun.com/114.114.114.114
