--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21878,6 +21878,7 @@ server=/cobenet.com/114.114.114.114
 server=/coboak.com/114.114.114.114
 server=/cocas.cc/114.114.114.114
 server=/cochemist.com/114.114.114.114
+server=/cochina.org/114.114.114.114
 server=/cocimg.com/114.114.114.114
 server=/coco413.com/114.114.114.114
 server=/cocoachina.com/114.114.114.114
