--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22627,6 +22627,7 @@ server=/cqyhpx.com/114.114.114.114
 server=/cqyhss.com/114.114.114.114
 server=/cqyingang.com/114.114.114.114
 server=/cqyouloft.com/114.114.114.114
+server=/cqytjzgc.com/114.114.114.114
 server=/cqyu.com/114.114.114.114
 server=/cqyuzhoujx.com/114.114.114.114
 server=/cqyznews.com/114.114.114.114
