--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22828,6 +22828,7 @@ server=/cscmgg.com/114.114.114.114
 server=/csct-china.com/114.114.114.114
 server=/csd568.com/114.114.114.114
 server=/csdc.info/114.114.114.114
+server=/csdcfvgf4.fun/114.114.114.114
 server=/csdeshang.com/114.114.114.114
 server=/csdewater.com/114.114.114.114
 server=/csdh.com/114.114.114.114
