--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22836,6 +22836,7 @@ server=/csdhe.com/114.114.114.114
 server=/csdiy.wiki/114.114.114.114
 server=/csdn.com/114.114.114.114
 server=/csdn.net/114.114.114.114
+server=/csdsa22.fun/114.114.114.114
 server=/csdyjs.net/114.114.114.114
 server=/csdyx.com/114.114.114.114
 server=/csea767.com/114.114.114.114
