--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24803,6 +24803,7 @@ server=/dependdns.com/114.114.114.114
 server=/depengwuyou.com/114.114.114.114
 server=/dephir.com/114.114.114.114
 server=/deppon.com/114.114.114.114
+server=/depsougnefta.com/114.114.114.114
 server=/deqingbank.com/114.114.114.114
 server=/dercase.com/114.114.114.114
 server=/derekchou.com/114.114.114.114
