--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24877,6 +24877,7 @@ server=/devqinwei.com/114.114.114.114
 server=/devsapp.net/114.114.114.114
 server=/devsiki.com/114.114.114.114
 server=/devtang.com/114.114.114.114
+server=/devui.design/114.114.114.114
 server=/devwiki.net/114.114.114.114
 server=/devzeng.com/114.114.114.114
 server=/deweisi.net/114.114.114.114
