--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24935,6 +24935,7 @@ server=/dfdinsin.com/114.114.114.114
 server=/dfdjy.net/114.114.114.114
 server=/dfdtt.com/114.114.114.114
 server=/dfedu.com/114.114.114.114
+server=/dfggq.com/114.114.114.114
 server=/dfgiso.com/114.114.114.114
 server=/dfgsb.com/114.114.114.114
 server=/dfham.com/114.114.114.114
