--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25068,6 +25068,7 @@ server=/dgq63136.icu/114.114.114.114
 server=/dgqjj.com/114.114.114.114
 server=/dgrbcj.com/114.114.114.114
 server=/dgrcw.com/114.114.114.114
+server=/dgrgr34.fun/114.114.114.114
 server=/dgrongkuang.com/114.114.114.114
 server=/dgruizhi.com/114.114.114.114
 server=/dgsaichi.com/114.114.114.114
