--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25084,6 +25084,7 @@ server=/dgswhg.com/114.114.114.114
 server=/dgsztyy.com/114.114.114.114
 server=/dgt-factory.com/114.114.114.114
 server=/dgtafl.com/114.114.114.114
+server=/dgtauto.com/114.114.114.114
 server=/dgtianbao.xin/114.114.114.114
 server=/dgtle.com/114.114.114.114
 server=/dgtn1718.org/114.114.114.114
