--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40347,6 +40347,7 @@ server=/hkanews.com/114.114.114.114
 server=/hkbaike.com.hk/114.114.114.114
 server=/hkbchina.com/114.114.114.114
 server=/hkca.club/114.114.114.114
+server=/hkcbeauty.com/114.114.114.114
 server=/hkcd.com/114.114.114.114
 server=/hkcgart.com/114.114.114.114
 server=/hkcna.hk/114.114.114.114
