--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40360,6 +40360,7 @@ server=/hkcwdc.com/114.114.114.114
 server=/hkdfc.com/114.114.114.114
 server=/hkdfgroup.com/114.114.114.114
 server=/hkdzxs.com/114.114.114.114
+server=/hkeig.com/114.114.114.114
 server=/hkexpressworld.com/114.114.114.114
 server=/hkfc.hk/114.114.114.114
 server=/hkfcchina.com/114.114.114.114
