--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40835,6 +40835,7 @@ server=/hnxttv.com/114.114.114.114
 server=/hnxunch.com/114.114.114.114
 server=/hnxuntang.com/114.114.114.114
 server=/hnxxc.com/114.114.114.114
+server=/hnxxt.net/114.114.114.114
 server=/hnyanglao.com/114.114.114.114
 server=/hnyaosi.com/114.114.114.114
 server=/hnyc998.com/114.114.114.114
