--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40844,6 +40844,7 @@ server=/hnyfkj.com/114.114.114.114
 server=/hnyichang.com/114.114.114.114
 server=/hnyingfang.com/114.114.114.114
 server=/hnyinhan.com/114.114.114.114
+server=/hnyishidengbao.com/114.114.114.114
 server=/hnyixiao.com/114.114.114.114
 server=/hnyl.xyz/114.114.114.114
 server=/hnylstone.com/114.114.114.114
