--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41552,6 +41552,7 @@ server=/hsehome.org/114.114.114.114
 server=/hsez.net/114.114.114.114
 server=/hsfund.com/114.114.114.114
 server=/hsfyyy.com/114.114.114.114
+server=/hsfzexsg.com/114.114.114.114
 server=/hsfzxjy.site/114.114.114.114
 server=/hsg2oi3c.com/114.114.114.114
 server=/hsgjj.com/114.114.114.114
