--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41974,6 +41974,7 @@ server=/huanhuanhuishou.com/114.114.114.114
 server=/huanhuanxin.com/114.114.114.114
 server=/huanhuba.com/114.114.114.114
 server=/huanidc.com/114.114.114.114
+server=/huanju.net/114.114.114.114
 server=/huanjutang.com/114.114.114.114
 server=/huanjuyun.com/114.114.114.114
 server=/huankkk.com/114.114.114.114
