--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42075,6 +42075,7 @@ server=/huashphoto.com/114.114.114.114
 server=/huashu-inc.com/114.114.114.114
 server=/huashuitax.com/114.114.114.114
 server=/huashunxinan.net/114.114.114.114
+server=/huashuowork.com/114.114.114.114
 server=/huasimtour.com/114.114.114.114
 server=/huasiwood.com/114.114.114.114
 server=/huasongwang.com/114.114.114.114
