--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42102,6 +42102,7 @@ server=/huawei.com/114.114.114.114
 server=/huawei.eu/114.114.114.114
 server=/huawei.ru/114.114.114.114
 server=/huaweiacad.com/114.114.114.114
+server=/huaweiapaas.com/114.114.114.114
 server=/huaweicloud-dns.com/114.114.114.114
 server=/huaweicloud-dns.net/114.114.114.114
 server=/huaweicloud-dns.org/114.114.114.114
