--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42106,6 +42106,7 @@ server=/huaweiapaas.com/114.114.114.114
 server=/huaweicloud-dns.com/114.114.114.114
 server=/huaweicloud-dns.net/114.114.114.114
 server=/huaweicloud-dns.org/114.114.114.114
+server=/huaweicloud-idme.com/114.114.114.114
 server=/huaweicloud.com/114.114.114.114
 server=/huaweicloudapis.com/114.114.114.114
 server=/huaweicloudwaf.com/114.114.114.114
