--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42107,6 +42107,7 @@ server=/huaweicloud-dns.com/114.114.114.114
 server=/huaweicloud-dns.net/114.114.114.114
 server=/huaweicloud-dns.org/114.114.114.114
 server=/huaweicloud-idme.com/114.114.114.114
+server=/huaweicloud-smn.com/114.114.114.114
 server=/huaweicloud.com/114.114.114.114
 server=/huaweicloudapis.com/114.114.114.114
 server=/huaweicloudwaf.com/114.114.114.114
