--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59093,6 +59093,7 @@ server=/morningwhistle.com/114.114.114.114
 server=/morstar.net/114.114.114.114
 server=/moseacg.com/114.114.114.114
 server=/moseeker.com/114.114.114.114
+server=/mosenni.com/114.114.114.114
 server=/mosesenglish.com/114.114.114.114
 server=/mosgcj.com/114.114.114.114
 server=/moshanghua.net/114.114.114.114
