--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59303,6 +59303,7 @@ server=/msgtjj.com/114.114.114.114
 server=/msh2020.com/114.114.114.114
 server=/mshandong.com/114.114.114.114
 server=/mshao.com/114.114.114.114
+server=/mshare.cc/114.114.114.114
 server=/mshareservices.com/114.114.114.114
 server=/mshg2019.com/114.114.114.114
 server=/mshishang.com/114.114.114.114
