--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59803,6 +59803,7 @@ server=/myhuaweicloud-koodrive.com/114.114.114.114
 server=/myhuaweicloud-obs.com/114.114.114.114
 server=/myhuaweicloud.com/114.114.114.114
 server=/myhuilv.com/114.114.114.114
+server=/myhwcdn.com/114.114.114.114
 server=/myhwclouds.com/114.114.114.114
 server=/myhwclouds.net/114.114.114.114
 server=/myider.com/114.114.114.114
