--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59841,6 +59841,7 @@ server=/mylinkapp.hk/114.114.114.114
 server=/mylitboy.com/114.114.114.114
 server=/myliwu.net/114.114.114.114
 server=/mylotushealth.com/114.114.114.114
+server=/mylovecards.com/114.114.114.114
 server=/mylovehome.com/114.114.114.114
 server=/mylsfw.com/114.114.114.114
 server=/mym001.com/114.114.114.114
