--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59979,6 +59979,7 @@ server=/myweimai.com/114.114.114.114
 server=/mywhh.com/114.114.114.114
 server=/mywinch.com/114.114.114.114
 server=/mywingcarpet.com/114.114.114.114
+server=/mywirebox.com/114.114.114.114
 server=/mywll.com/114.114.114.114
 server=/mywood.cc/114.114.114.114
 server=/myworld6.com/114.114.114.114
