--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60055,6 +60055,7 @@ server=/mzuimg.net/114.114.114.114
 server=/mzwu.com/114.114.114.114
 server=/mzxjzp.com/114.114.114.114
 server=/mzxstar.com/114.114.114.114
+server=/mzxun.com/114.114.114.114
 server=/mzy0.com/114.114.114.114
 server=/mzyege.com/114.114.114.114
 server=/mzyfz.com/114.114.114.114
