--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60265,6 +60265,7 @@ server=/narrowad.com/114.114.114.114
 server=/naruto.red/114.114.114.114
 server=/narutom.com/114.114.114.114
 server=/narwal.com/114.114.114.114
+server=/narwaltech.com/114.114.114.114
 server=/nas-ya.com/114.114.114.114
 server=/nasack.net/114.114.114.114
 server=/nascrew.com/114.114.114.114
