--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60443,6 +60443,7 @@ server=/ncfwx.com/114.114.114.114
 server=/ncfz.com/114.114.114.114
 server=/nch-bg.com/114.114.114.114
 server=/nchq.cc/114.114.114.114
+server=/nchte.com/114.114.114.114
 server=/nchtech.com/114.114.114.114
 server=/nciyuan.com/114.114.114.114
 server=/ncmem.com/114.114.114.114
