--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60486,6 +60486,7 @@ server=/nddaily.com/114.114.114.114
 server=/nddnrm.com/114.114.114.114
 server=/nddst.com/114.114.114.114
 server=/ndhys.com/114.114.114.114
+server=/ndiip.com/114.114.114.114
 server=/ndj520.com/114.114.114.114
 server=/ndjcwf.com/114.114.114.114
 server=/ndkhn.com/114.114.114.114
