--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60527,6 +60527,7 @@ server=/neihancommunity.net/114.114.114.114
 server=/neihandiantai.com/114.114.114.114
 server=/neihanfly.com/114.114.114.114
 server=/neihanshequ.com/114.114.114.114
+server=/neijh.com/114.114.114.114
 server=/neimaowang.com/114.114.114.114
 server=/neimenggugames.com/114.114.114.114
 server=/neisha.cc/114.114.114.114
