--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60533,6 +60533,7 @@ server=/neimenggugames.com/114.114.114.114
 server=/neisha.cc/114.114.114.114
 server=/neitui.com/114.114.114.114
 server=/neituixiaowangzi.com/114.114.114.114
+server=/nejup.com/114.114.114.114
 server=/neko.pub/114.114.114.114
 server=/nelkshuhe.com/114.114.114.114
 server=/nellit.net/114.114.114.114
