--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60612,6 +60612,7 @@ server=/netcoretec.com/114.114.114.114
 server=/netcute.com/114.114.114.114
 server=/netded.com/114.114.114.114
 server=/netdzb.com/114.114.114.114
+server=/netease-inc.com/114.114.114.114
 server=/netease.com/114.114.114.114
 server=/netease.im/114.114.114.114
 server=/neteasegames.com/114.114.114.114
