--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60615,6 +60615,7 @@ server=/netdzb.com/114.114.114.114
 server=/netease-inc.com/114.114.114.114
 server=/netease.com/114.114.114.114
 server=/netease.im/114.114.114.114
+server=/neteasegame.com/114.114.114.114
 server=/neteasegames.com/114.114.114.114
 server=/netentsec.com/114.114.114.114
 server=/netesee.com/114.114.114.114
