--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60824,6 +60824,7 @@ server=/nfcic.com/114.114.114.114
 server=/nfcmag.com/114.114.114.114
 server=/nfcreader.net/114.114.114.114
 server=/nffund.com/114.114.114.114
+server=/nfkos.com/114.114.114.114
 server=/nflchina.com/114.114.114.114
 server=/nfmedia.com/114.114.114.114
 server=/nfmrtfv.com/114.114.114.114
