--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60842,6 +60842,7 @@ server=/ngaa.shop/114.114.114.114
 server=/ngaa.top/114.114.114.114
 server=/ngaacdn.com/114.114.114.114
 server=/ngaacdn.net/114.114.114.114
+server=/ngaagslb.com/114.114.114.114
 server=/ngaagslb.net/114.114.114.114
 server=/ngabbs.com/114.114.114.114
 server=/ngacn.cc/114.114.114.114
