--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60883,6 +60883,7 @@ server=/nhcsw.com/114.114.114.114
 server=/nhdmd.com/114.114.114.114
 server=/nhganggeban.com/114.114.114.114
 server=/nhhongyi.com/114.114.114.114
+server=/nhjn788.fun/114.114.114.114
 server=/nhmuni.com/114.114.114.114
 server=/nhnexpo.com/114.114.114.114
 server=/nhnst.com/114.114.114.114
