--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61990,6 +61990,7 @@ server=/normanes.com/114.114.114.114
 server=/normar8888.com/114.114.114.114
 server=/normcore.com/114.114.114.114
 server=/normstar.net/114.114.114.114
+server=/normugtog.com/114.114.114.114
 server=/norsencn.com/114.114.114.114
 server=/north30degrees.com/114.114.114.114
 server=/northdy.com/114.114.114.114
