--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62169,6 +62169,7 @@ server=/ntdingke.com/114.114.114.114
 server=/ntdvf.com/114.114.114.114
 server=/ntefyxq.com/114.114.114.114
 server=/ntes53.com/114.114.114.114
+server=/ntescdn.com/114.114.114.114
 server=/ntesmail.com/114.114.114.114
 server=/ntesunn.com/114.114.114.114
 server=/ntfabu.com/114.114.114.114
