--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62320,6 +62320,7 @@ server=/nw0898.com/114.114.114.114
 server=/nwbiotec.com/114.114.114.114
 server=/nwct.me/114.114.114.114
 server=/nwdlink.com/114.114.114.114
+server=/nwell.net/114.114.114.114
 server=/nweon.com/114.114.114.114
 server=/nwshotel.com/114.114.114.114
 server=/nx-sc.com/114.114.114.114
