--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77377,6 +77377,7 @@ server=/telegramyug.cc/114.114.114.114
 server=/telehr.com/114.114.114.114
 server=/teleinfoo.com/114.114.114.114
 server=/teleland.net/114.114.114.114
+server=/teleows.com/114.114.114.114
 server=/televivi.com/114.114.114.114
 server=/telfri.net/114.114.114.114
 server=/teligen-cloud.com/114.114.114.114
