--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77584,6 +77584,7 @@ server=/tfcaijing.com/114.114.114.114
 server=/tfcloud.com/114.114.114.114
 server=/tfclub.com/114.114.114.114
 server=/tfedu.net/114.114.114.114
+server=/tfeic.com/114.114.114.114
 server=/tff.bz/114.114.114.114
 server=/tfg2.com/114.114.114.114
 server=/tfgame.vip/114.114.114.114
