--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77599,6 +77599,7 @@ server=/tfgame.vip/114.114.114.114
 server=/tfgvb.com/114.114.114.114
 server=/tfhj.com/114.114.114.114
 server=/tfidc.net/114.114.114.114
+server=/tfiph.com/114.114.114.114
 server=/tfkj.games/114.114.114.114
 server=/tfkyj.com/114.114.114.114
 server=/tflzhongkongban.com/114.114.114.114
