--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77833,6 +77833,7 @@ server=/thxddb.com/114.114.114.114
 server=/thxdx.com/114.114.114.114
 server=/thxedu.com/114.114.114.114
 server=/thxflt.com/114.114.114.114
+server=/thxnr.com/114.114.114.114
 server=/thyoo.com/114.114.114.114
 server=/thyuu.com/114.114.114.114
 server=/thz56.com/114.114.114.114
