--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78536,6 +78536,7 @@ server=/tmall.ru/114.114.114.114
 server=/tmallalicdn.com/114.114.114.114
 server=/tmallgenie.com/114.114.114.114
 server=/tmallgenieapi.com/114.114.114.114
+server=/tmallplay.net/114.114.114.114
 server=/tmallvvv.com/114.114.114.114
 server=/tmbbs.com/114.114.114.114
 server=/tmcdn.net/114.114.114.114
