--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78572,6 +78572,7 @@ server=/tmwzs.com/114.114.114.114
 server=/tmxmall.com/114.114.114.114
 server=/tmxxw.com/114.114.114.114
 server=/tn2000.com/114.114.114.114
+server=/tnarzc.com/114.114.114.114
 server=/tnblog.net/114.114.114.114
 server=/tnbz.com/114.114.114.114
 server=/tnccdn.com/114.114.114.114
