--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78615,6 +78615,7 @@ server=/tocosc.com/114.114.114.114
 server=/tocreating.com/114.114.114.114
 server=/today36524.com/114.114.114.114
 server=/todaycache.net/114.114.114.114
+server=/todaydunhuang.com/114.114.114.114
 server=/todayguizhou.com/114.114.114.114
 server=/todaygx.com/114.114.114.114
 server=/todayidc.com/114.114.114.114
