--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79386,6 +79386,7 @@ server=/tssns.net/114.114.114.114
 server=/tsstorry.com/114.114.114.114
 server=/tsstyb.com/114.114.114.114
 server=/tssyjt.com/114.114.114.114
+server=/tst98.com/114.114.114.114
 server=/tstvxmt.com/114.114.114.114
 server=/tsukistar.fun/114.114.114.114
 server=/tswjn.com/114.114.114.114
