--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79426,6 +79426,7 @@ server=/ttcl.cc/114.114.114.114
 server=/ttdailynews.com/114.114.114.114
 server=/ttdown.com/114.114.114.114
 server=/ttechhk.com/114.114.114.114
+server=/tteferty33.fun/114.114.114.114
 server=/ttfdc.net/114.114.114.114
 server=/ttfly.com/114.114.114.114
 server=/ttfuav.com/114.114.114.114
