--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79490,6 +79490,7 @@ server=/ttppoo.com/114.114.114.114
 server=/ttq.com/114.114.114.114
 server=/ttq.so/114.114.114.114
 server=/ttriqi.com/114.114.114.114
+server=/ttroytj33.fun/114.114.114.114
 server=/tts8.com/114.114.114.114
 server=/ttsfgyrj.com/114.114.114.114
 server=/ttshengbei.com/114.114.114.114
