--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79684,6 +79684,7 @@ server=/tujixiazai.com/114.114.114.114
 server=/tujuren.com/114.114.114.114
 server=/tuke8.com/114.114.114.114
 server=/tuke88.com/114.114.114.114
+server=/tukeai.com/114.114.114.114
 server=/tukedu.com/114.114.114.114
 server=/tukkk.com/114.114.114.114
 server=/tuku.com/114.114.114.114
