--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80205,6 +80205,7 @@ server=/u8ad.com/114.114.114.114
 server=/u8p2swz.xyz/114.114.114.114
 server=/u8qpyx.com/114.114.114.114
 server=/u8sy.com/114.114.114.114
+server=/u8yb16b993.com/114.114.114.114
 server=/u8yx.com/114.114.114.114
 server=/u9baoku.xyz/114.114.114.114
 server=/u9h.com/114.114.114.114
