--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80221,6 +80221,7 @@ server=/ub-os.com/114.114.114.114
 server=/ub.cc/114.114.114.114
 server=/ub8020.com/114.114.114.114
 server=/ubaiyi.com/114.114.114.114
+server=/ubalh.com/114.114.114.114
 server=/ubangmang.com/114.114.114.114
 server=/ubeethiesemo.com/114.114.114.114
 server=/ubeihai.com/114.114.114.114
