--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80247,6 +80247,7 @@ server=/ubixioe.com/114.114.114.114
 server=/ubja.vip/114.114.114.114
 server=/ublese.com/114.114.114.114
 server=/ubmconlinereg.com/114.114.114.114
+server=/ubmsinoexpo.com/114.114.114.114
 server=/uboat100.com/114.114.114.114
 server=/uboxol.com/114.114.114.114
 server=/ubs001.com/114.114.114.114
