--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80257,6 +80257,7 @@ server=/ubuant.com/114.114.114.114
 server=/ubuntukylin.com/114.114.114.114
 server=/ubuuk.com/114.114.114.114
 server=/uc-union.com/114.114.114.114
+server=/uc003.com/114.114.114.114
 server=/uc108.com/114.114.114.114
 server=/uc123.com/114.114.114.114
 server=/uc129.com/114.114.114.114
