--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80267,6 +80267,7 @@ server=/uc23.net/114.114.114.114
 server=/uc56.com/114.114.114.114
 server=/uc666.com/114.114.114.114
 server=/uc669.com/114.114.114.114
+server=/uca6.com/114.114.114.114
 server=/ucacc.com/114.114.114.114
 server=/ucai123.com/114.114.114.114
 server=/ucaiyuan.com/114.114.114.114
