--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80309,6 +80309,7 @@ server=/ucloudstor.com/114.114.114.114
 server=/ucly.net/114.114.114.114
 server=/ucmmine.com/114.114.114.114
 server=/ucnaming.com/114.114.114.114
+server=/ucnaming.info/114.114.114.114
 server=/ucnano.com/114.114.114.114
 server=/ucnest.com/114.114.114.114
 server=/ucpaas.com/114.114.114.114
