--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80364,6 +80364,7 @@ server=/uemo.net/114.114.114.114
 server=/ueno-china.com/114.114.114.114
 server=/uenu.com/114.114.114.114
 server=/uepei.com/114.114.114.114
+server=/ueram.com/114.114.114.114
 server=/ueren.com/114.114.114.114
 server=/uestcedu.com/114.114.114.114
 server=/uestcgxcd.com/114.114.114.114
