--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80591,6 +80591,7 @@ server=/uminsky.com/114.114.114.114
 server=/umiwi.com/114.114.114.114
 server=/umiwx.com/114.114.114.114
 server=/umjicanvas.com/114.114.114.114
+server=/umjsik.com/114.114.114.114
 server=/uml-tech.com/114.114.114.114
 server=/umlchina.com/114.114.114.114
 server=/umlife.net/114.114.114.114
