--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80627,6 +80627,7 @@ server=/underwater-robot.com/114.114.114.114
 server=/undoifyouwant.site/114.114.114.114
 server=/uneatclean.com/114.114.114.114
 server=/uneed.com/114.114.114.114
+server=/uneede.com/114.114.114.114
 server=/unfish.net/114.114.114.114
 server=/ungifts.com/114.114.114.114
 server=/uni-forest.com/114.114.114.114
