--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80666,6 +80666,7 @@ server=/unigress.com/114.114.114.114
 server=/uniham.net/114.114.114.114
 server=/unihertz.com/114.114.114.114
 server=/unilaw.net/114.114.114.114
+server=/unilz588.com/114.114.114.114
 server=/unimtx.com/114.114.114.114
 server=/uninf.com/114.114.114.114
 server=/uninstall-tools.com/114.114.114.114
