--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80712,6 +80712,7 @@ server=/unithinker.com/114.114.114.114
 server=/unitod.com/114.114.114.114
 server=/unitrans-agency.com/114.114.114.114
 server=/unitweld.com/114.114.114.114
+server=/unitworld.net/114.114.114.114
 server=/unitymanual.com/114.114.114.114
 server=/univ-bio.com/114.114.114.114
 server=/university-hr.com/114.114.114.114
