--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81174,6 +81174,7 @@ server=/v-danci.com/114.114.114.114
 server=/v-lz.com/114.114.114.114
 server=/v-mate.mobi/114.114.114.114
 server=/v-mo2012.com/114.114.114.114
+server=/v-pack.net/114.114.114.114
 server=/v-vay.com/114.114.114.114
 server=/v.biz/114.114.114.114
 server=/v.sohu/114.114.114.114
