--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81228,6 +81228,7 @@ server=/v78q.com/114.114.114.114
 server=/v814.com/114.114.114.114
 server=/v8gb.com/114.114.114.114
 server=/v8zige.com/114.114.114.114
+server=/v9022f162g.com/114.114.114.114
 server=/v977.com/114.114.114.114
 server=/v9b5n91.com/114.114.114.114
 server=/va-etong.com/114.114.114.114
