--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81304,6 +81304,7 @@ server=/vaycaptoc-vn.com/114.114.114.114
 server=/vaydeer.com/114.114.114.114
 server=/vayol.com/114.114.114.114
 server=/vbango.com/114.114.114.114
+server=/vbaof.com/114.114.114.114
 server=/vbaoxian-cib.com/114.114.114.114
 server=/vbbobo.com/114.114.114.114
 server=/vbidc.com/114.114.114.114
