--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81315,6 +81315,7 @@ server=/vc800.com/114.114.114.114
 server=/vcbeat.net/114.114.114.114
 server=/vcchar.com/114.114.114.114
 server=/vcd.io/114.114.114.114
+server=/vcdfsf99.fun/114.114.114.114
 server=/vcdnga.com/114.114.114.114
 server=/vcg.com/114.114.114.114
 server=/vchangyi.com/114.114.114.114
