--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81345,6 +81345,7 @@ server=/vcsmemo.com/114.114.114.114
 server=/vctianshanvs.com/114.114.114.114
 server=/vcudu.com/114.114.114.114
 server=/vcxpe.com/114.114.114.114
+server=/vcxv73.fun/114.114.114.114
 server=/vdaye.com/114.114.114.114
 server=/vdazz.net/114.114.114.114
 server=/vdbet.com/114.114.114.114
