--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81354,6 +81354,7 @@ server=/vctianshanvs.com/114.114.114.114
 server=/vcudu.com/114.114.114.114
 server=/vcxpe.com/114.114.114.114
 server=/vcxv73.fun/114.114.114.114
+server=/vcxv787.fun/114.114.114.114
 server=/vdaye.com/114.114.114.114
 server=/vdazz.net/114.114.114.114
 server=/vdbet.com/114.114.114.114
