--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81352,6 +81352,7 @@ server=/vdazz.net/114.114.114.114
 server=/vdbet.com/114.114.114.114
 server=/vdfbjd-qwurnf-gsmgb.com/114.114.114.114
 server=/vdfvdf33q.fun/114.114.114.114
+server=/vdhf042.fun/114.114.114.114
 server=/vdiagnostic.com/114.114.114.114
 server=/vdian.com/114.114.114.114
 server=/vdisk.me/114.114.114.114
