--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81371,6 +81371,7 @@ server=/vdnsv.com/114.114.114.114
 server=/vdnyuwwq.com/114.114.114.114
 server=/vdolady.com/114.114.114.114
 server=/vdongchina.com/114.114.114.114
+server=/vdsdsf2.fun/114.114.114.114
 server=/vdson888.com/114.114.114.114
 server=/vdx9.com/114.114.114.114
 server=/vdyoo.com/114.114.114.114
