--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81469,6 +81469,7 @@ server=/verypan.com/114.114.114.114
 server=/verysource.com/114.114.114.114
 server=/verystar.net/114.114.114.114
 server=/verysync.com/114.114.114.114
+server=/veryt111.fun/114.114.114.114
 server=/veryvp.com/114.114.114.114
 server=/veryweibo.com/114.114.114.114
 server=/verywind.com/114.114.114.114
