--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81490,6 +81490,7 @@ server=/vfcdnrd.com/114.114.114.114
 server=/vfcpay.com/114.114.114.114
 server=/vfcsz.com/114.114.114.114
 server=/vfdvdfv77.fun/114.114.114.114
+server=/vfdvdg67.fun/114.114.114.114
 server=/vfinemusic.com/114.114.114.114
 server=/vfocus.net/114.114.114.114
 server=/vftfishing.com/114.114.114.114
