--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81506,6 +81506,7 @@ server=/vfuke.net/114.114.114.114
 server=/vfund.org/114.114.114.114
 server=/vfvdf.com/114.114.114.114
 server=/vfvdsati.com/114.114.114.114
+server=/vfvdvd99.fun/114.114.114.114
 server=/vfx123.com/114.114.114.114
 server=/vg.com/114.114.114.114
 server=/vg173.com/114.114.114.114
