--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81537,6 +81537,7 @@ server=/vibit.cc/114.114.114.114
 server=/vibrou.com/114.114.114.114
 server=/vic18.com/114.114.114.114
 server=/vicchen.me/114.114.114.114
+server=/vichc.com/114.114.114.114
 server=/vicigaming.com/114.114.114.114
 server=/vickn.com/114.114.114.114
 server=/vicl.net/114.114.114.114
