--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81564,6 +81564,7 @@ server=/videohupu.com/114.114.114.114
 server=/videoincloud.com/114.114.114.114
 server=/videojj.com/114.114.114.114
 server=/videotomp3.site/114.114.114.114
+server=/videougc.com/114.114.114.114
 server=/videoxiaoyouxi.com/114.114.114.114
 server=/videoyx.com/114.114.114.114
 server=/vidmate.mobi/114.114.114.114
