--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81872,6 +81872,7 @@ server=/vmeti.com/114.114.114.114
 server=/vmgikpw.com/114.114.114.114
 server=/vmic.xyz/114.114.114.114
 server=/vmicloud.com/114.114.114.114
+server=/vmiua.com/114.114.114.114
 server=/vmkj.net/114.114.114.114
 server=/vmlib.com/114.114.114.114
 server=/vmoiver.com/114.114.114.114
