--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81874,6 +81874,7 @@ server=/vmoviercdn.com/114.114.114.114
 server=/vmsky.com/114.114.114.114
 server=/vmvps.com/114.114.114.114
 server=/vmylan.com/114.114.114.114
+server=/vn765.com/114.114.114.114
 server=/vnadssb.com/114.114.114.114
 server=/vname.com/114.114.114.114
 server=/vnanke.com/114.114.114.114
